[package]
name = "candycorn"
version = "0.1.0"
edition = "2021"
description = "Tool to patch kernel module versioning data"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
goblin = "0.5.4"
